organize proof generation